chore: Update the openapi specification to make it less out-of-date (#290)
* chore: Update the openapi specification to make it less out-of-date

* chore: Regenerate the API models

* fix: Remove (unused) 'grading_failed' from ManualStatus

* chore: Use enums for submission statuses in the code

* fix: Use StrEnum for status enums (makes them json-serialisable)

* chore: DB migration to use submission status enums
