# grader_service/api/models/submission.py
@@ -5,6 +5,10 @@ from typing import List, Dict  # noqa: F401
 from grader_service.api.models.base_model import Model
 from grader_service.api import util
 
+from grader_service.api.models.auto_status import AutoStatus  # noqa: E501
+from grader_service.api.models.feedback_status import FeedbackStatus  # noqa: E501
+from grader_service.api.models.manual_status import ManualStatus  # noqa: E501
+
 
 class Submission(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -12,7 +16,22 @@ class Submission(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, id=None, submitted_at=None, auto_status=None, manual_status=None, username=None, user_display_name=None, grading_score=None, score_scaling=None, score=None, assignid=None, commit_hash=None, feedback_status=None, edited=None):  # noqa: E501
+    def __init__(
+        self,
+        id=None,
+        submitted_at=None,
+        auto_status=None,
+        manual_status=None,
+        username=None,
+        user_display_name=None,
+        grading_score=None,
+        score_scaling=None,
+        score=None,
+        assignid=None,
+        commit_hash=None,
+        feedback_status=None,
+        edited=None,
+    ):  # noqa: E501
         """Submission - a model defined in OpenAPI
 
         :param id: The id of this Submission.  # noqa: E501
@@ -20,9 +39,9 @@ class Submission(Model):
         :param submitted_at: The submitted_at of this Submission.  # noqa: E501
         :type submitted_at: datetime
         :param auto_status: The auto_status of this Submission.  # noqa: E501
-        :type auto_status: str
+        :type auto_status: AutoStatus
         :param manual_status: The manual_status of this Submission.  # noqa: E501
-        :type manual_status: str
+        :type manual_status: ManualStatus
         :param username: The username of this Submission.  # noqa: E501
         :type username: str
         :param user_display_name: The user_display_name of this Submission.  # noqa: E501
@@ -38,40 +57,40 @@ class Submission(Model):
         :param commit_hash: The commit_hash of this Submission.  # noqa: E501
         :type commit_hash: str
         :param feedback_status: The feedback_status of this Submission.  # noqa: E501
-        :type feedback_status: str
+        :type feedback_status: FeedbackStatus
         :param edited: The edited of this Submission.  # noqa: E501
         :type edited: bool
         """
         self.openapi_types = {
-            'id': int,
-            'submitted_at': datetime,
-            'auto_status': str,
-            'manual_status': str,
-            'username': str,
-            'user_display_name': str,
-            'grading_score': float,
-            'score_scaling': float,
-            'score': float,
-            'assignid': int,
-            'commit_hash': str,
-            'feedback_status': str,
-            'edited': bool
+            "id": int,
+            "submitted_at": datetime,
+            "auto_status": AutoStatus,
+            "manual_status": ManualStatus,
+            "username": str,
+            "user_display_name": str,
+            "grading_score": float,
+            "score_scaling": float,
+            "score": float,
+            "assignid": int,
+            "commit_hash": str,
+            "feedback_status": FeedbackStatus,
+            "edited": bool,
         }
 
         self.attribute_map = {
-            'id': 'id',
-            'submitted_at': 'submitted_at',
-            'auto_status': 'auto_status',
-            'manual_status': 'manual_status',
-            'username': 'username',
-            'user_display_name': 'user_display_name',
-            'grading_score': 'grading_score',
-            'score_scaling': 'score_scaling',
-            'score': 'score',
-            'assignid': 'assignid',
-            'commit_hash': 'commit_hash',
-            'feedback_status': 'feedback_status',
-            'edited': 'edited'
+            "id": "id",
+            "submitted_at": "submitted_at",
+            "auto_status": "auto_status",
+            "manual_status": "manual_status",
+            "username": "username",
+            "user_display_name": "user_display_name",
+            "grading_score": "grading_score",
+            "score_scaling": "score_scaling",
+            "score": "score",
+            "assignid": "assignid",
+            "commit_hash": "commit_hash",
+            "feedback_status": "feedback_status",
+            "edited": "edited",
         }
 
         self._id = id
@@ -89,7 +108,7 @@ class Submission(Model):
         self._edited = edited
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Submission':
+    def from_dict(cls, dikt) -> "Submission":
         """Returns the dict as a model
 
         :param dikt: A dict.
@@ -142,56 +161,44 @@ class Submission(Model):
         self._submitted_at = submitted_at
 
     @property
-    def auto_status(self) -> str:
+    def auto_status(self) -> AutoStatus:
         """Gets the auto_status of this Submission.
 
 
         :return: The auto_status of this Submission.
-        :rtype: str
+        :rtype: AutoStatus
         """
         return self._auto_status
 
     @auto_status.setter
-    def auto_status(self, auto_status: str):
+    def auto_status(self, auto_status: AutoStatus):
         """Sets the auto_status of this Submission.
 
 
         :param auto_status: The auto_status of this Submission.
-        :type auto_status: str
+        :type auto_status: AutoStatus
         """
-        allowed_values = ["not_graded", "pending", "automatically_graded", "grading_failed"]  # noqa: E501
-        if auto_status not in allowed_values:
-            raise ValueError(
-                "Invalid value for `auto_status` ({0}), must be one of {1}"
-                .format(auto_status, allowed_values)
-            )
 
         self._auto_status = auto_status
 
     @property
-    def manual_status(self) -> str:
+    def manual_status(self) -> ManualStatus:
         """Gets the manual_status of this Submission.
 
 
         :return: The manual_status of this Submission.
-        :rtype: str
+        :rtype: ManualStatus
         """
         return self._manual_status
 
     @manual_status.setter
-    def manual_status(self, manual_status: str):
+    def manual_status(self, manual_status: ManualStatus):
         """Sets the manual_status of this Submission.
 
 
         :param manual_status: The manual_status of this Submission.
-        :type manual_status: str
+        :type manual_status: ManualStatus
         """
-        allowed_values = ["not_graded", "manually_graded", "being_edited", "grading_failed"]  # noqa: E501
-        if manual_status not in allowed_values:
-            raise ValueError(
-                "Invalid value for `manual_status` ({0}), must be one of {1}"
-                .format(manual_status, allowed_values)
-            )
 
         self._manual_status = manual_status
 
@@ -277,9 +284,13 @@ class Submission(Model):
         :type score_scaling: float
         """
         if score_scaling is not None and score_scaling > 1.0:  # noqa: E501
-            raise ValueError("Invalid value for `score_scaling`, must be a value less than or equal to `1.0`")  # noqa: E501
+            raise ValueError(
+                "Invalid value for `score_scaling`, must be a value less than or equal to `1.0`"
+            )  # noqa: E501
         if score_scaling is not None and score_scaling < 0.0:  # noqa: E501
-            raise ValueError("Invalid value for `score_scaling`, must be a value greater than or equal to `0.0`")  # noqa: E501
+            raise ValueError(
+                "Invalid value for `score_scaling`, must be a value greater than or equal to `0.0`"
+            )  # noqa: E501
 
         self._score_scaling = score_scaling
 
@@ -347,29 +358,23 @@ class Submission(Model):
         self._commit_hash = commit_hash
 
     @property
-    def feedback_status(self) -> str:
+    def feedback_status(self) -> FeedbackStatus:
         """Gets the feedback_status of this Submission.
 
 
         :return: The feedback_status of this Submission.
-        :rtype: str
+        :rtype: FeedbackStatus
         """
         return self._feedback_status
 
     @feedback_status.setter
-    def feedback_status(self, feedback_status: str):
+    def feedback_status(self, feedback_status: FeedbackStatus):
         """Sets the feedback_status of this Submission.
 
 
         :param feedback_status: The feedback_status of this Submission.
-        :type feedback_status: str
+        :type feedback_status: FeedbackStatus
         """
-        allowed_values = ["not_generated", "generating", "generated", "generation_failed", "feedback_outdated"]  # noqa: E501
-        if feedback_status not in allowed_values:
-            raise ValueError(
-                "Invalid value for `feedback_status` ({0}), must be one of {1}"
-                .format(feedback_status, allowed_values)
-            )
 
         self._feedback_status = feedback_status
 
